--- a/app/src/styles/header.css
+++ b/app/src/styles/header.css
@@ -1,29 +1,18 @@
-.main {
-    
-    margin: 10px;
-}
-
-h1 {
-    font-size: 30px;
-}
-p {
-    font-size: 18px;
-}
 .header {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    padding: 100px;
+	display: flex;
+	text-align: center;
+	height: 90px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+}
+.navbar-header {
+	margin-left: 30%;
+	margin-top: 3%;
 }
 
-.header div {
-    position: relative;
-    margin: 10px;
-}
-
-.header img {
-    width: 263px;
-    height: 209px;
-    padding-right: 50px;
+.img-logo {
+    width: 100px;
+    position: left;
 }
 
