added some style in footer header and main

--- a/app/src/styles/footer.css
+++ b/app/src/styles/footer.css
@@ -23,6 +23,7 @@
 .logo-foot{
 	grid-column: 2 / 3;
   	grid-row: 1;
+	justify-self: center;
   
 }
 
@@ -42,6 +43,8 @@
 	font-size: 20px;
 	grid-column: 3 / 3;
   	grid-row: 1;
+	justify-self: end;
+	align-self: center;
 
 	
 }
