--- a/app/src/styles/mainContent.css
+++ b/app/src/styles/mainContent.css
@@ -2,17 +2,33 @@ h2 {
     font-weight: bold;
 }
 main {
- text-align: center;
- align-items: center;
- max-width: 1200px;
+    
+    text-align: center;
+}
+.heading {
+    display: flex;
+    flex: 50%;
+    justify-content: space-around;
+    margin: 50px;
+}
+.heading div  {
+    height: 400px;
+    width: 400px;
+}
+.heading div img {
+    height: 400px;
+    width: 400px;
 }
 .main {
     margin-top: 30px;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
 }
 .main div {
     width: 200px;
     margin: auto;
+    margin-top: 100px;
 }
 main div img {
     width: 200px;
@@ -20,6 +36,8 @@ main div img {
     border-radius: 15px;
     margin-bottom: 30px;
 }
+
+  
 main button {
     width: 129px;
     height: 42px;   
