added styles for cards with content

--- a/app/src/styles/header.css
+++ b/app/src/styles/header.css
@@ -7,8 +7,9 @@
 	border-color: black;
 }
 .navbar-header {
-	margin-left: 30%;
+	margin-left: 15%;
 	margin-top: 3%;
+	justify-content: center;
 }
 
 .img-logo {
