--- a/app/src/styles/searchField.css
+++ b/app/src/styles/searchField.css
@@ -1,6 +1,5 @@
 .search{
-    margin-left: 50px;
-    margin-top: 1.2%;
+    margin-left: 14rem;
 	display: flex;
     justify-content: end;
 	align-items: center;
