--- a/app/src/styles/FilterCatalog.css
+++ b/app/src/styles/FilterCatalog.css
@@ -9,7 +9,7 @@
 .filter-select {
     margin-left: 3rem;
     margin-top: 30px;
-    width: 200px;
+    width: 15vw;
     text-align: center;
     color: black;
     text-decoration: none;
@@ -18,9 +18,9 @@
 }
 
 .btn {
-    margin-left: 30rem;
+    margin-left: 20vw;
     margin-top: 30px;
-    width: 200px;
+    width: 15vw;
     text-align: center;
     text-decoration: none;
     background-color: antiquewhite;
